item_kafka_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itemkafka
  labels:
    app: itemkafka
spec:
  selector:
    matchLabels:
      app: itemkafka
  template:
    metadata:
      labels:
        app: itemkafka
    spec:
      containers:
        - name: itemkafka
          image: fkrk56/apcitemkafka
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
