kafka-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kafka-client
  labels:
    app: kafka-client
spec:
  replicas: 3
  containers:
  - name: kafka-client
    image: bitnami/kafka:3.2
    command: ["tail"]
    args: ["-f", "/dev/null"]
