kafka_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: auth
          image: fkrk56/apckafka
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
