order_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app: order
spec:
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: fkrk56/apcorder
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
