product_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  labels:
    app: product
spec:
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: fkrk56/apcproduct
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
