storage_kafka_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storagekafka
  labels:
    app: storagekafka
spec:
  selector:
    matchLabels:
      app: storagekafka
  template:
    metadata:
      labels:
        app: storagekafka
    spec:
      containers:
        - name: storagekafka
          image: fkrk56/apcstoragekafka
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
