auth_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: NodePort
  selector:
    app: auth
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    nodePort: 30007
