dashboard_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  type: NodePort
  selector:
    app: dashboard
  ports:
  - name: http
    port: 3001
    targetPort: 3001
    nodePort: 30008
