item_kafka_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itemkafka
spec:
  type: NodePort
  selector:
    app: itemkafka
  ports:
    - name: http
      port: 4001
      targetPort: 4001
      nodePort: 30012
