kafka_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  type: NodePort
  selector:
    app: kafka
  ports:
    - name: http
      port: 4000
      targetPort: 4000
      nodePort: 30010
