order_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
spec:
  type: NodePort
  selector:
    app: order
  ports:
    - name: http
      port: 3003
      targetPort: 3003
      nodePort: 30010
