product_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  type: NodePort
  selector:
    app: product
  ports:
    - name: http
      port: 3002
      targetPort: 3002
      nodePort: 30009
