istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: apc-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: home
spec:
  hosts:
    - "*"
  gateways:
    - apc-gateway
  http:
    - match:
        - uri:
            exact: /
      rewrite:
        uri: "/users"
      route:
        - destination:
            host: "auth.default.svc.cluster.local"
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth
spec:
  hosts:
    - "*"
  gateways:
    - apc-gateway
  http:
    - match:
        - uri:
            prefix: /users
      route:
        - destination:
            host: "auth.default.svc.cluster.local"
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
spec:
  hosts:
    - "*"
  gateways:
    - apc-gateway
  http:
    - match:
        - uri:
            prefix: /dashboard
      route:
        - destination:
            host: "dashboard.default.svc.cluster.local"
            port:
              number: 3001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
spec:
  hosts:
    - "*"
  gateways:
    - apc-gateway
  http:
    - match:
        - uri:
            prefix: /dashboard
      route:
        - destination:
            host: "dashboard.default.svc.cluster.local"
            port:
              number: 3002
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
spec:
  hosts:
    - "*"
  gateways:
    - apc-gateway
  http:
    - match:
        - uri:
            prefix: /dashboard
      route:
        - destination:
            host: "dashboard.default.svc.cluster.local"
            port:
              number: 3003
