nginx-ingress.yaml
# mynginx-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: /users
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    # - host: -> domain이 없는 경우 생략 가능
    - http:
        paths:
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 3001
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-svc
                port:
                  number: 80
